<resources>
    <string name="app_name">Adapt</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_log_out">Log Out</string>
    <string name="action_log_in">Sign In</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_create">create an idea</string>
    <string name="title_activity_question_creation">Add Questions</string>
    <string name="create_user_title">Create User</string>
    <string name="hypothesis_profile_title">Hypothesis</string>
    <string name="splash_title">Splash</string>

    <!--Strings for managing user creation and account log in-->
    <string name="create_user_welcome">Welcome to Adapt!</string>
    <string name="hypothesis_subscription_explanation">This is where your subscribed hypotheses will show up. Create a user to subscribe.</string>
    <string name="sign_in_title">Sign In</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="username_explanation">Your username will be visible to others when you comment or create an hypothesis</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="password_confirm">confirm password</string>
    <string name="forgot_password">I forgot my password</string>
    <string name="sign_up_prompt"><u>New here? Sign up!</u></string>

    <!--Strings for errors in the user creation/login screens-->
    <string name="error_intro">"Please "</string>
    <string name="error_blank_username">enter a username</string>
    <string name="error_bad_username">enter a username that does not contain "@"</string>
    <string name="error_blank_password">enter a password</string>
    <string name="error_mismatched_passwords">enter the same password twice</string>
    <string name="error_email">enter a valid email address</string>
    <string name="error_join">", and "</string>
    <string name="error_end">.</string>
    <string name="progress_login">Logging you in&#8230;</string>
    <string name="progress_signup">Signing you up&#8230;</string>
    <string name="user_required_create_dialog_message">You need to be registered to create an hypothesis. Would you like to sign up now?</string>
    <string name="user_required_subscribe_dialog_message">You need to be registered to subscribe to an hypothesis. Would you like to sign up now?</string>
    <string name="user_required_dialog_positive">Take me there!</string>
    <string name="user_required_dialog_negative">Not right now</string>

    <!--Strings for the hypothesis creation screens-->
    <string name="create_try_this">Try this:</string>
    <string name="create_try_hint">e.g. Open your window at night</string>
    <string name="create_to_accomplish">To accomplish:</string>
    <string name="create_accomplish_hint">e.g. Increase sleep quality</string>
    <string name="create_preview_explanation">This is what your hypothesis will look like to others:</string>
    <string name="create_category">Category:</string>
    <string name="create_description">Description:</string>
    <string name="create_description_hint">Enter a brief description of your idea...</string>
    <string name="create_next">NEXT</string>
    <string name="create_error_try_empty">enter a "Try this" suggestion</string>
    <string name="create_error_accomplish_empty">enter a "To accomplish" suggestion</string>
    <string name="create_error_category_empty">select a category</string>
    <string name="create_error_description_empty">enter an hypothesis description</string>
    <string name="add_question_description">If you would like, you can add more questions to ask subscribers to your idea every time that they enter data:</string>
    <string name="add_question_button">Add a question</string>
    <string name="create_hypothesis_complete">Create Idea</string>

    <string name="before_question_explanation">This question will be asked every time a new user joins your hypothesis:</string>
    <string name="after_question_explanation">This question will be asked every time a user submits data:</string>

    <string name="sleep_before_question">How would you rate your current average sleep?</string>
    <string name="focus_before_question">How would you rate your current average focus level?</string>
    <string name="nutrition_before_question">How would you rate your current nutrition habits?</string>

    <string name="sleep_after_question">How would you rate your sleep last night?</string>
    <string name="focus_after_question">How would you rate your focus after trying this hypothesis?</string>
    <string name="nutrition_after_question">How would you rate your nutrition habits after trying this hypothesis?</string>

    <!-- Strings for user data reporting -->
    <string name="rate_hypothesis_question">Overall, how would you rate the quality of this hypothesis?</string>

    <!-- Strings for parse queries -->
    <string name="sleep_object_id">H5IoNhCT46</string>
    <string name="focus_object_id">2M5E91TvVs</string>
    <string name="nutrition_object_id">ub8DflPZKo</string>
    
    <!-- Strings in the hypothesis profile page -->
    <string name="hypothesis_join_text">Join</string>
    <string name="hypothesis_joined_text">Joined</string>

</resources>
